--- a/index.html
+++ b/index.html
@@ -118,4 +118,9 @@
         </div>
     </div>
 </body>
+<script>
+const width=window.innerWidth;
+const height=window.innerHeight;
+console.log('width:',$(width),'height:',$(height));
+</script>
 </html>
