--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 <script>
 const width=window.innerWidth;
 const height=window.innerHeight;
-console.log('width:',$(width),'height:',$(height));
+console.log("width :",width);
+console.log("height:",height);
 </script>
 </html>
