--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
 <script>
 const width=window.innerWidth;
 const height=window.innerHeight;
-console.log("width :",width);
-console.log("height:",height);
+console.log("width :"+width);
+console.log("height:"+height);
+alert("width :"+width+"\nheight:"+height);
 </script>
 </html>
