--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </nav>
         </div>
     </div>
+    <img id="bg-image" src="images/background-image.png">
     <div class="middle">
         <div class="product">
             <div id="item">
@@ -113,8 +114,6 @@
                 <p>$50</p>
                 <button id="add-to-cart">Add to cart</button>
             </div>
-            
-            
         </div>
     </div>
 </body>
